--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
+    "framer-motion": "^11.2.10",
     "genkit": "^1.20.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
